--- a/results.qmd
+++ b/results.qmd
@@ -80,40 +80,43 @@ To address this question, we will initially examine the overall trends in youth 
 
     To assess trends in youth tobacco exposure rates, we analyzed the reported percentage of students who had smoked before each year. The accompanying boxplots demonstrate a clear **decreasing** trend in the percentage of youth tobacco exposure from 1999 to 2017. The median declined from approximately 50% in 1999 to below 20% in 2017, with consistently stable variance in data each year. The similar size of the boxplots across years suggests a consistent number of observations annually.
 
-```{r}
-# Filter dataset 
-data1 <- data_bf %>% filter( Topic == "Cigarette Use (Youth)" & Gender == "Overall" & Res == "Ever")
+    ```{r}
+    # Filter dataset 
+    data1 <- data_bf %>% filter( Topic == "Cigarette Use (Youth)" & Gender == "Overall" & Res == "Ever")
 
-# Treat Year as factors 
-data_y <- data1
-data_y$YEAR <- factor(data_y$YEAR)
+    # Treat Year as factors 
+    data_y <- data1
+    data_y$YEAR <- factor(data_y$YEAR)
 
-# Plot Boxplot
-ggplot(data_y, aes(YEAR, Value)) +
-  geom_boxplot(varwidth = TRUE, fill = '#FFA07A') +
-  ggtitle("Boxplot: Percentage of Youth Tobacco Exposure from 1999 to 2017")+
-  ylab("Percentage")+
-  xlab("Year")
+    # Plot Boxplot
+    ggplot(data_y, aes(YEAR, Value)) +
+      geom_boxplot(varwidth = TRUE, fill = '#FFA07A') +
+      ggtitle("Boxplot: Percentage of Youth Tobacco Exposure from 1999 to 2017")+
+      ylab("Percentage")+
+      xlab("Year")
+    ```
+
+```{=html}
+<!-- -->
 ```
-
 -   **Tobacco Addiction**\
     Similarly, to examine changes in the percentage of youth addicted to tobacco from 1999 to 2017, we focused on the reported percentage of students who smoked more than 20 days out of 30 before the survey. The accompanying boxplot indicates a **decreasing trend** in the percentage of youth tobacco addiction during this period. While the median of the youth tobacco addiction rate decreased from around 5% to approximately 1% from 1999 to 2017, the upper quartile decreased from roughly 15% to 5%. This observation suggests **significant improvements** have been noted **in areas with historically high youth tobacco addiction rates** over the past two decades.
 
-```{r}
-# filter data
-data2 <- data_bf %>% filter( Topic == "Cigarette Use (Youth)" & Gender == "Overall" & Res == "Frequent")
+    ```{r}
+    # filter data
+    data2 <- data_bf %>% filter( Topic == "Cigarette Use (Youth)" & Gender == "Overall" & Res == "Frequent")
 
-# Treat Year as factors 
-data_y2 <- data2
-data_y2$YEAR <- factor(data_y2$YEAR)
+    # Treat Year as factors 
+    data_y2 <- data2
+    data_y2$YEAR <- factor(data_y2$YEAR)
 
-# Plot Boxplot
-ggplot(data_y2, aes(YEAR, Value)) +
-  geom_boxplot(varwidth = TRUE, fill = '#FFA07A') +
-  ggtitle("Boxplot: Percentage of Youth Tobacco Addiction from 1999 to 2017")+
-  ylab("Percentage")+
-  xlab("Year")
-```
+    # Plot Boxplot
+    ggplot(data_y2, aes(YEAR, Value)) +
+      geom_boxplot(varwidth = TRUE, fill = '#FFA07A') +
+      ggtitle("Boxplot: Percentage of Youth Tobacco Addiction from 1999 to 2017")+
+      ylab("Percentage")+
+      xlab("Year")
+    ```
 
 ### **Variation of Trends in Genders**
 
@@ -123,35 +126,37 @@ We are also interested in the evolution of youth tobacco exposure rate and addic
 
     We now grouped the data by year and gender to observe the reported tobacco exposure rates for different genders in different years. The graph below illustrates a clear decreasing trend for both female and male youth tobacco exposure rates from 1999 to 2017, confirming our earlier findings. Furthermore, the smooth line indicates a consistent gap between male and female youth tobacco exposure rates across years, suggesting that the **male population consistently has relatively higher youth tobacco exposure rates**.
 
-```{r,fig.height = 5, fig.width = 8, message=FALSE}
-# filter data
-data_ge <- data_bf %>% filter( Topic == "Cigarette Use (Youth)" & Gender != "Overall" & Res == "Ever")
+    ```{r,fig.height = 5, fig.width = 8, message=FALSE}
+    # filter data
+    data_ge <- data_bf %>% filter( Topic == "Cigarette Use (Youth)" & Gender != "Overall" & Res == "Ever")
 
-ggplot(data_ge, aes(x = jitter(YEAR,1.2), y = Value, color = Gender)) +
-  geom_point()+
-  geom_smooth(method = "loess", span = .4, se = FALSE)+
-  scale_x_continuous(breaks = seq(1999,2017,1))+
-  xlab("Year")+
-  ylab("Percentage")+
-  ggtitle("Gender Difference in Youth Tobacco Exposure From 1999 to 2017")
+    ggplot(data_ge, aes(x = jitter(YEAR,1.2), y = Value, color = Gender)) +
+      geom_point()+
+      geom_smooth(method = "loess", span = .4, se = FALSE)+
+      scale_x_continuous(breaks = seq(1999,2017,1))+
+      xlab("Year")+
+      ylab("Percentage")+
+      ggtitle("Gender Difference in Youth Tobacco Exposure From 1999 to 2017")
+    ```
+
+```{=html}
+<!-- -->
 ```
-
 -   **Tobacco Addiction**
 
     As in our previous analysis, we grouped the data by year and gender. The graph shows a decreasing trend in youth tobacco addiction rates for both genders across the years, consistent with our earlier findings. Notably, a consistent gap is observed between male and female tobacco addiction rates across all years, with the **male population consistently exhibiting higher rates**.
 
-```{r,fig.height = 5, fig.width = 8, message=FALSE}
-data_gf <- data_bf %>% filter( Topic == "Cigarette Use (Youth)" & Gender != "Overall" & Res == "Frequent")
+    ```{r,fig.height = 5, fig.width = 8, message=FALSE}
+    data_gf <- data_bf %>% filter( Topic == "Cigarette Use (Youth)" & Gender != "Overall" & Res == "Frequent")
 
-ggplot(data_gf, aes(x = jitter(YEAR,1.2), y = Value, color = Gender)) +
-  geom_point()+
-  geom_smooth(method = "loess", span = .4, se = FALSE)+
-  scale_x_continuous(breaks = seq(1999,2017,1))+
-  xlab("Year")+
-  ylab("Percentage")+
-  ggtitle("Gender Difference in Youth Tobacco Addiction From 1999 to 2017")
-
-```
+    ggplot(data_gf, aes(x = jitter(YEAR,1.2), y = Value, color = Gender)) +
+      geom_point()+
+      geom_smooth(method = "loess", span = .4, se = FALSE)+
+      scale_x_continuous(breaks = seq(1999,2017,1))+
+      xlab("Year")+
+      ylab("Percentage")+
+      ggtitle("Gender Difference in Youth Tobacco Addiction From 1999 to 2017")
+    ```
 
 ### **Variation of Trends by Education Level**
 
@@ -161,31 +166,34 @@ In this section, we will examine youth tobacco exposure and addiction rates sepa
 
     While both middle school and high school youth tobacco exposure rates exhibit clear decreasing trends in the graph, **high school students consistently demonstrate significantly higher tobacco exposure rates.** The median high school tobacco exposure rate decreased from 70% to approximately 25% between 1999 and 2017, whereas the median middle school tobacco exposure rate decreased from around 45% to 10% during the same period. Throughout all years, high school students consistently maintain much higher median tobacco exposure rates. Additionally, the boxplots share a similar size, indicating a comparable number of observations in each year and education level.
 
-```{r, fig.height = 5, fig.width = 8}
-data_y1 <- data1
-data_y1$YEAR <- factor(data_y1$YEAR)
-ggplot(data_y1, aes(YEAR, Value, color = Edu)) +
-  geom_boxplot(varwidth = TRUE) +
-  #facet_grid(Edu~.)+
-  ggtitle("Boxplot of Percentage of Youth Tobacco Exposure By Education Levels")+
-  ylab("Percentage")+
-  xlab("Year")
-```
+    ```{r, fig.height = 5, fig.width = 8}
+    data_y1 <- data1
+    data_y1$YEAR <- factor(data_y1$YEAR)
+    ggplot(data_y1, aes(YEAR, Value, color = Edu)) +
+      geom_boxplot(varwidth = TRUE) +
+      #facet_grid(Edu~.)+
+      ggtitle("Boxplot of Percentage of Youth Tobacco Exposure By Education Levels")+
+      ylab("Percentage")+
+      xlab("Year")
+    ```
 
+```{=html}
+<!-- -->
+```
 -   **Tobacco Addiction**
 
     In exploring youth tobacco addiction rates, we observed decreasing trends in both education levels. High school students exhibited a median tobacco addiction rate of around 16% in 1999, which decreased to approximately 2.5% in 2017. In contrast, middle school displayed significantly lower youth tobacco addiction rates over the years, declining from around 4% to almost 0% during the same period. It is evident that **high school consistently maintains much higher tobacco addiction rates than middle school across all years**.
 
-```{r, fig.height = 5, fig.width = 8}
-data_y2 <- data2
-data_y2$YEAR <- factor(data_y2$YEAR)
-ggplot(data_y2, aes(YEAR, Value,color = Edu)) +
-  geom_boxplot(varwidth = TRUE) +
-  #facet_grid(Edu~., scales = 'free_y')+
-  ggtitle("Boxplot of Percentage of Youth Tobacco Addiction By Education")+
-  ylab("Percentage")+
-  xlab("Year")
-```
+    ```{r, fig.height = 5, fig.width = 8}
+    data_y2 <- data2
+    data_y2$YEAR <- factor(data_y2$YEAR)
+    ggplot(data_y2, aes(YEAR, Value,color = Edu)) +
+      geom_boxplot(varwidth = TRUE) +
+      #facet_grid(Edu~., scales = 'free_y')+
+      ggtitle("Boxplot of Percentage of Youth Tobacco Addiction By Education")+
+      ylab("Percentage")+
+      xlab("Year")
+    ```
 
 ### **Considering Both Genders and Education Levels**
 
@@ -195,40 +203,43 @@ Building upon our previous analysis, it became evident that both gender and educ
 
     Faceting on years, we observe a clear declining trend in youth tobacco exposure from 1999 to 2017, confirming our previous findings. Additionally, a notable distinction emerges between middle school and high school average tobacco exposure rates, with middle school rates consistently around half of those in high school across all years. While gender differences in tobacco exposure rates are relatively minor, the graph indicates that males consistently exhibit higher youth tobacco exposure rates when controlling for year and educational levels.
 
-```{r,fig.height = 10, fig.width = 10, message=FALSE}
-data_avegee <- data_ge %>% group_by(YEAR,Edu, Gender) %>% summarise(ave_p = mean(Value), std = sd(Value))
+    ```{r,fig.height = 10, fig.width = 10, message=FALSE}
+    data_avegee <- data_ge %>% group_by(YEAR,Edu, Gender) %>% summarise(ave_p = mean(Value), std = sd(Value))
 
-ggplot(data_avegee, aes(x = Edu, y = ave_p, fill= Gender))+
-  geom_col(position = "dodge")+
-  geom_errorbar(
-    aes(ymin = ave_p - std, ymax = ave_p + std),
-    position = position_dodge(.9),
-    width = .2
-  )+
-  facet_wrap(vars(YEAR))+
-  xlab("Year")+
-  ylab("Percentage")+
-  ggtitle("Youth Tobacco Exposure By Education Levels and Gender From 1999 to 2017")
+    ggplot(data_avegee, aes(x = Edu, y = ave_p, fill= Gender))+
+      geom_col(position = "dodge")+
+      geom_errorbar(
+        aes(ymin = ave_p - std, ymax = ave_p + std),
+        position = position_dodge(.9),
+        width = .2
+      )+
+      facet_wrap(vars(YEAR))+
+      xlab("Year")+
+      ylab("Percentage")+
+      ggtitle("Youth Tobacco Exposure By Education Levels and Gender From 1999 to 2017")
+    ```
+
+```{=html}
+<!-- -->
 ```
-
 -   **Tobacco Addiction**
 
     Youth tobacco addiction rates also exhibit a distinct decreasing pattern across years, controlling for gender and education level. The disparity between middle school and high school addiction rates is striking, with the middle school average consistently remaining below 5% (from around 5% to almost 0%), while high school tobacco addiction rates dropped from around 17% to 2.5% from 1999 to 2017. Additionally, gender differences in tobacco addiction are noticeable in both middle school and high school across the years. However, compared to education level differences, gender differences are less prominent in tobacco addiction rates.
 
-```{r,fig.height = 10, fig.width = 10, message = FALSE}
-data_avegef <- data_gf %>% group_by(YEAR,Edu, Gender) %>% summarise(ave_p = mean(Value), std = sd(Value))
-ggplot(data_avegef, aes(x = Edu, y = ave_p, fill= Gender))+
-  geom_col(position = "dodge")+
-  geom_errorbar(
-    aes(ymin = ave_p - std, ymax = ave_p + std),
-    position = position_dodge(.9),
-    width = .2
-  )+
-  facet_wrap(vars(YEAR))+
-  xlab("Year")+
-  ylab("Percentage")+
-  ggtitle("Youth Tobacco Addiction By Education Levels and Gender From 1999 to 2017")
-```
+    ```{r,fig.height = 10, fig.width = 10, message = FALSE}
+    data_avegef <- data_gf %>% group_by(YEAR,Edu, Gender) %>% summarise(ave_p = mean(Value), std = sd(Value))
+    ggplot(data_avegef, aes(x = Edu, y = ave_p, fill= Gender))+
+      geom_col(position = "dodge")+
+      geom_errorbar(
+        aes(ymin = ave_p - std, ymax = ave_p + std),
+        position = position_dodge(.9),
+        width = .2
+      )+
+      facet_wrap(vars(YEAR))+
+      xlab("Year")+
+      ylab("Percentage")+
+      ggtitle("Youth Tobacco Addiction By Education Levels and Gender From 1999 to 2017")
+    ```
 
 ### **Summary**
 
@@ -338,55 +349,58 @@ The prevalence of youth tobacco addiction is markedly higher in high school comp
 
     In the Cleveland dot plot, states are organized in descending order based on the percentage of tobacco exposure among male youth. Consistent with previous findings, Louisiana, West Virginia, and South Carolina demonstrate higher rates of tobacco exposure across both educational levels and genders. Furthermore, across the majority of states, males exhibit a higher prevalence of tobacco exposure than females within both educational levels.
 
-```{r,fig.height = 6, fig.width = 8}
-# filter data
-exposure_g_middle <- exposure |>
-  filter(Gender != "Overall" & Edu == "Middle School")
-exposure_g_high <- exposure |>
-  filter(Gender != "Overall" & Edu == "High School")
-# Cleveland dot plots
-plot1 <- ggplot(exposure_g_middle, aes(x = value, y = fct_reorder2(region, Gender=='Male', value, .desc=FALSE), color = Gender)) +
-  geom_point() +
-  labs(title = "2017 Middle School Youth Tobacco Exposure By Gender and Education",
-       x = "Percentage",
-       y = "State") +
-  theme_minimal()
-plot2 <- ggplot(exposure_g_high, aes(x = value, y = fct_reorder2(region, Gender=='Male', value, .desc=FALSE), color = Gender)) +
-  geom_point() +
-  labs(title = "2017 High School Youth Tobacco Exposure By Gender and Education",
-       x = "Percentage",
-       y = "State") +
-  theme_minimal()
-# combined two plots
-plot_grid(plot1, plot2, ncol = 1, align = "vh")
-```
+    ```{r,fig.height = 6, fig.width = 8}
+    # filter data
+    exposure_g_middle <- exposure |>
+      filter(Gender != "Overall" & Edu == "Middle School")
+    exposure_g_high <- exposure |>
+      filter(Gender != "Overall" & Edu == "High School")
+    # Cleveland dot plots
+    plot1 <- ggplot(exposure_g_middle, aes(x = value, y = fct_reorder2(region, Gender=='Male', value, .desc=FALSE), color = Gender)) +
+      geom_point() +
+      labs(title = "2017 Middle School Youth Tobacco Exposure By Gender and Education",
+           x = "Percentage",
+           y = "State") +
+      theme_minimal()
+    plot2 <- ggplot(exposure_g_high, aes(x = value, y = fct_reorder2(region, Gender=='Male', value, .desc=FALSE), color = Gender)) +
+      geom_point() +
+      labs(title = "2017 High School Youth Tobacco Exposure By Gender and Education",
+           x = "Percentage",
+           y = "State") +
+      theme_minimal()
+    # combined two plots
+    plot_grid(plot1, plot2, ncol = 1, align = "vh")
+    ```
 
+```{=html}
+<!-- -->
+```
 -   **Tobacco Addiction**
 
     The plot revealed similar pattern with previous choropleth map, where the percentage of high school youth addicted to tobacco is higher. In most states, males have a higher prevalence of tobacco addiction than females within both educational levels. Male in both education levels in Louisiana have the highest rate of tobacco addiction.
 
-```{r}
-# filter data
-frequent_g_middle <- frequent |>
-  filter(Gender != "Overall" & Edu == "Middle School")
-frequent_g_high <- frequent |>
-  filter(Gender != "Overall" & Edu == "High School")
-# cleveland dot plots
-plot3 <- ggplot(frequent_g_middle, aes(x = value, y = fct_reorder2(region, Gender=='Male', value, .desc=FALSE), color = Gender)) +
-  geom_point() +
-  labs(title = "2017 Middle School Youth Tobacco Addiction By Gender and Education",
-       x = "Frequent Smoker Percentage",
-       y = "State") +
-  theme_minimal()
-plot4 <- ggplot(frequent_g_high, aes(x = value, y = fct_reorder2(region, Gender=='Male', value, .desc=FALSE), color = Gender)) +
-  geom_point() +
-  labs(title = "2017 High School Youth Tobacco Addiction By Gender and Education",
-       x = "Frequent Smoker Percentage",
-       y = "State") +
-  theme_minimal()
-# combined two plots
-plot_grid(plot3, plot4, ncol = 1, align = "vh")
-```
+    ```{r}
+    # filter data
+    frequent_g_middle <- frequent |>
+      filter(Gender != "Overall" & Edu == "Middle School")
+    frequent_g_high <- frequent |>
+      filter(Gender != "Overall" & Edu == "High School")
+    # cleveland dot plots
+    plot3 <- ggplot(frequent_g_middle, aes(x = value, y = fct_reorder2(region, Gender=='Male', value, .desc=FALSE), color = Gender)) +
+      geom_point() +
+      labs(title = "2017 Middle School Youth Tobacco Addiction By Gender and Education",
+           x = "Frequent Smoker Percentage",
+           y = "State") +
+      theme_minimal()
+    plot4 <- ggplot(frequent_g_high, aes(x = value, y = fct_reorder2(region, Gender=='Male', value, .desc=FALSE), color = Gender)) +
+      geom_point() +
+      labs(title = "2017 High School Youth Tobacco Addiction By Gender and Education",
+           x = "Frequent Smoker Percentage",
+           y = "State") +
+      theme_minimal()
+    # combined two plots
+    plot_grid(plot3, plot4, ncol = 1, align = "vh")
+    ```
 
 ### **Summary**
 
@@ -404,61 +418,64 @@ In this instance, we will focus on examining the data from the state of Louisian
 
     The plot provides a detailed examination of the ratio of tobacco exposure rates by education level and gender in Louisiana. In line with earlier findings, high school, overall, exhibits higher rates of tobacco exposure for both genders compared to middle school. Furthermore, across both education levels, males consistently demonstrate higher tobacco exposure rates than females. The notable difference between middle school and high school tobacco exposure rates suggests that education level has a more pronounced impact on youth tobacco rates compared to gender effects, corroborating our previous findings. Additionally, it's observed that there are more samples in middle school than high school and more in females than males.
 
-```{r}
-# data pre-processing
-exposure_mosaic <- data2017 |>
-  filter(region == "louisiana" & Topic == "Cigarette Use (Youth)" & Res == "Ever" & Gender != "Overall")|>
-  mutate(Exposure = ifelse(Res == "Ever", "Had Smoked", Res)) |>
-  select(Gender, Edu, Exposure, value, Sample) |>
-  mutate(Frequency = round(0.01 * value * Sample))
-never_smoked_mosaic <- exposure_mosaic |>
-  mutate(Exposure = "Never Smoked",
-         Frequency = Sample - Frequency)
-exposure_mosaic_full <- bind_rows(exposure_mosaic, never_smoked_mosaic) |>
-  select(-value, -Sample) |>
-  rename(Education_Level = Edu)
-# redefined variable order
-exposure_mosaic_full$Education_Level <- factor(exposure_mosaic_full$Education_Level, levels = c("Middle School", "High School"))
-exposure_mosaic_full$Exposure <- factor(exposure_mosaic_full$Exposure, levels = c("Never Smoked", "Had Smoked"))
-exposure_mosaic_cases <-tidyr::uncount(base::as.data.frame(exposure_mosaic_full), Frequency)
-# mosaic plot
-vcd::mosaic(Exposure ~ Education_Level + Gender, 
-            data = exposure_mosaic_cases, 
-            direction = c("v","v","h"),
-            main="Youth Tobacco Exposure of Louisiana in 2017",
-            highlighting_fill = c("lightyellow", '#FFA07A'), 
-            gp_labels=(gpar(fontsize=9)))
-```
+    ```{r}
+    # data pre-processing
+    exposure_mosaic <- data2017 |>
+      filter(region == "louisiana" & Topic == "Cigarette Use (Youth)" & Res == "Ever" & Gender != "Overall")|>
+      mutate(Exposure = ifelse(Res == "Ever", "Had Smoked", Res)) |>
+      select(Gender, Edu, Exposure, value, Sample) |>
+      mutate(Frequency = round(0.01 * value * Sample))
+    never_smoked_mosaic <- exposure_mosaic |>
+      mutate(Exposure = "Never Smoked",
+             Frequency = Sample - Frequency)
+    exposure_mosaic_full <- bind_rows(exposure_mosaic, never_smoked_mosaic) |>
+      select(-value, -Sample) |>
+      rename(Education_Level = Edu)
+    # redefined variable order
+    exposure_mosaic_full$Education_Level <- factor(exposure_mosaic_full$Education_Level, levels = c("Middle School", "High School"))
+    exposure_mosaic_full$Exposure <- factor(exposure_mosaic_full$Exposure, levels = c("Never Smoked", "Had Smoked"))
+    exposure_mosaic_cases <-tidyr::uncount(base::as.data.frame(exposure_mosaic_full), Frequency)
+    # mosaic plot
+    vcd::mosaic(Exposure ~ Education_Level + Gender, 
+                data = exposure_mosaic_cases, 
+                direction = c("v","v","h"),
+                main="Youth Tobacco Exposure of Louisiana in 2017",
+                highlighting_fill = c("lightyellow", '#FFA07A'), 
+                gp_labels=(gpar(fontsize=9)))
+    ```
 
+```{=html}
+<!-- -->
+```
 -   Tobacco Addiction
 
     The ratio of youth tobacco addiction is very low for both genders in both education level, even if Louisiana has highest percentage of frequent smoker. Tobacco addiction is more prevalent among males during both middle school and high school.
 
-```{r}
-# data pre-processing
-frequent_mosaic <- data2017 |>
-  filter(region == "louisiana" & Topic == "Cigarette Use (Youth)" & Res == "Frequent" & Gender != "Overall")|>
-  mutate(Frequent_Smoker = ifelse(Res == "Frequent", "Yes", Res)) |>
-  select(Gender, Edu, Frequent_Smoker, value, Sample) |>
-  mutate(Frequency = round(0.01 * value * Sample))
-not_frequent_mosaic <- frequent_mosaic |>
-  mutate(Frequent_Smoker = "No",
-         Frequency = Sample - Frequency)
-frequent_mosaic_full <- bind_rows(frequent_mosaic, not_frequent_mosaic) |>
-  select(-value, -Sample) |>
-  rename(Education_Level = Edu)
-# redefined variable order
-frequent_mosaic_full$Education_Level <- factor(frequent_mosaic_full$Education_Level, levels = c("Middle School", "High School"))
-frequent_mosaic_full$Frequent_Smoker <- factor(frequent_mosaic_full$Frequent_Smoker, levels = c("No", "Yes"))
-frequent_mosaic_cases <-tidyr::uncount(base::as.data.frame(frequent_mosaic_full), Frequency)
-# mosaic plot
-vcd::mosaic(Frequent_Smoker ~ Education_Level + Gender, 
-            data = frequent_mosaic_cases, 
-            direction = c("v","v","h"),
-            main="Youth Tobacco Addiction of Louisiana in 2017", 
-            highlighting_fill = c("lightyellow", '#FFA07A'), 
-            gp_labels=(gpar(fontsize=9)))
-```
+    ```{r}
+    # data pre-processing
+    frequent_mosaic <- data2017 |>
+      filter(region == "louisiana" & Topic == "Cigarette Use (Youth)" & Res == "Frequent" & Gender != "Overall")|>
+      mutate(Frequent_Smoker = ifelse(Res == "Frequent", "Yes", Res)) |>
+      select(Gender, Edu, Frequent_Smoker, value, Sample) |>
+      mutate(Frequency = round(0.01 * value * Sample))
+    not_frequent_mosaic <- frequent_mosaic |>
+      mutate(Frequent_Smoker = "No",
+             Frequency = Sample - Frequency)
+    frequent_mosaic_full <- bind_rows(frequent_mosaic, not_frequent_mosaic) |>
+      select(-value, -Sample) |>
+      rename(Education_Level = Edu)
+    # redefined variable order
+    frequent_mosaic_full$Education_Level <- factor(frequent_mosaic_full$Education_Level, levels = c("Middle School", "High School"))
+    frequent_mosaic_full$Frequent_Smoker <- factor(frequent_mosaic_full$Frequent_Smoker, levels = c("No", "Yes"))
+    frequent_mosaic_cases <-tidyr::uncount(base::as.data.frame(frequent_mosaic_full), Frequency)
+    # mosaic plot
+    vcd::mosaic(Frequent_Smoker ~ Education_Level + Gender, 
+                data = frequent_mosaic_cases, 
+                direction = c("v","v","h"),
+                main="Youth Tobacco Addiction of Louisiana in 2017", 
+                highlighting_fill = c("lightyellow", '#FFA07A'), 
+                gp_labels=(gpar(fontsize=9)))
+    ```
 
 ### **Summary**
 
